@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-06-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/utility.c (ExpandFilenames): Input wildcard file
+        specifications with a subdirectory component such as
+        "subdir/*.dpx" were not working.
+
+</UL>
+<p>
 2009-06-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
